Complete referee adapter contracts